* Refactored how we pull from the DB and API to allow for pulling matches without stats and stats later * Reworked the front end to show a listing of match summaries with the option to show stats

--- a/site/front_end/static/css/application.css
+++ b/site/front_end/static/css/application.css
@@ -1,3 +1,8 @@
+.group:after {
+  content: "";
+  display: table;
+  clear: both;
+}
 body {
   background: #fff;
 }
@@ -67,7 +72,7 @@ body {
   font-size: 10px;
   padding-top: 10px;
 }
-.my-stats {
+.matches {
   padding-top: 35px;
   padding-bottom: 40px;
   text-align: center;
@@ -78,10 +83,8 @@ body {
   margin-bottom: 0;
 }
 table.table-stats {
-  border-left: 1px solid #ddd;
-  border-right: 1px solid #ddd;
-  border-bottom: 1px solid #ddd;
   background: #fff;
+  margin-bottom: 0;
 }
 table.table-stats tr.header td.team-blue,
 table.table-stats tr.header td.team-red {
@@ -168,6 +171,7 @@ table.table-stats td.expandable.expand {
 }
 .league-decorator {
   position: relative;
+  display: inline-block;
 }
 .league-decorator .league-icon {
   height: 30px;
@@ -175,9 +179,10 @@ table.table-stats td.expandable.expand {
 .league-decorator .league-offset {
   display: none;
   position: absolute;
-  right: 50%;
-  top: 0;
-  margin-right: -32px;
+  left: 0;
+  top: 50%;
+  margin-left: 36px;
+  margin-top: -15px;
   font-weight: bold;
 }
 .league-decorator .league-offset.played-up {
@@ -222,18 +227,22 @@ tr.row-0 .league-decorator .league-offset,
 }
 .summoner-info {
   position: relative;
-  overflow: hidden;
   margin: 0 auto;
   width: 64px;
 }
+.summoner-info:after {
+  content: "";
+  display: table;
+  clear: both;
+}
 .summoner-info .summoner-champion-icon {
-  height: 42px;
+  width: 42px;
   float: left;
 }
 .summoner-info .summoner-champion-level {
   position: absolute;
-  bottom: 2px;
-  left: 2px;
+  bottom: 3px;
+  left: 4px;
   color: #fff;
   font-weight: bold;
   text-shadow: -1px -1px 0 #000000, 1px -1px 0 #000000, -1px 1px 0 #000000, 1px 1px 0 #000000;
@@ -249,7 +258,7 @@ tr.row-0 .league-decorator .league-offset,
 .summoner-info .summoner-spell-book .summoner-spell-icon {
   display: block;
   margin-top: 2px;
-  height: 20px;
+  width: 20px;
 }
 .summoner-info .summoner-spell-book .summoner-spell-icon:first-child {
   margin-top: 0;
@@ -290,4 +299,131 @@ tr.row-0 .league-decorator .league-offset,
 }
 .popover-nowrap {
   white-space: nowrap;
+}
+.match {
+  background: #fff;
+  border: 1px solid #ccc;
+  margin-top: 5px;
+}
+.match:first-child {
+  margin-top: 0;
+}
+.match .match-summary {
+  display: table;
+  width: 100%;
+  position: relative;
+  padding: 10px;
+}
+.match .match-summary:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+.match .match-summary.victory {
+  border-left: 10px solid #63c063;
+}
+.match .match-summary.defeat {
+  border-left: 10px solid #a63935;
+}
+.match .match-summary .summoner-info-container {
+  display: table-cell;
+  vertical-align: middle;
+  width: 200px;
+}
+.match .match-summary .summoner-info-container .summoner-info {
+  float: left;
+  width: 91px;
+}
+.match .match-summary .summoner-info-container .summoner-info .summoner-champion-icon {
+  width: 60px;
+}
+.match .match-summary .summoner-info-container .summoner-info .summoner-champion-level {
+  font-size: 14px;
+  line-height: 14px;
+}
+.match .match-summary .summoner-info-container .summoner-info .summoner-spell-book {
+  width: 29px;
+  height: 60px;
+}
+.match .match-summary .summoner-info-container .summoner-info .summoner-spell-book .summoner-spell-icon {
+  width: 29px;
+}
+.match .match-summary .summoner-info-container .summoner-name {
+  display: none;
+}
+.match .match-summary .summoner-info-container .stat-container {
+  float: left;
+  margin-left: 10px;
+  padding-top: 9px;
+  text-align: left;
+}
+.match .match-summary .summoner-info-container .stat-container .stat-score .icon,
+.match .match-summary .summoner-info-container .stat-container .stat-minions .icon {
+  width: 18px;
+  height: 21px;
+  background-size: 30px 30px;
+}
+.match .match-summary .summoner-info-container .stat-container .stat-score .value,
+.match .match-summary .summoner-info-container .stat-container .stat-minions .value {
+  font-size: 15px;
+  line-height: 15px;
+}
+.match .match-summary .overall-league-decorator {
+  display: table-cell;
+  vertical-align: middle;
+  padding-left: 10px;
+  text-align: left;
+}
+.match .match-summary .overall-league-decorator .league-decorator .league-icon {
+  height: 40px;
+}
+.match .match-summary .overall-league-decorator .league-decorator .league-offset {
+  display: block;
+  margin-left: 52px;
+}
+.match .match-summary .overall-league-decorator .league-decorator .league-offset .league-offset-icon {
+  font-size: 16px;
+  margin-left: -3px;
+}
+.match .match-summary .overall-league-decorator .league-decorator .league-offset.played-up .league-offset-icon {
+  top: -10px;
+}
+.match .match-summary .overall-league-decorator .league-decorator .league-offset.played-down .league-offset-icon {
+  bottom: -10px;
+}
+.match .match-summary .overall-league-decorator .league-decorator .league-offset .league-offset-value {
+  font-size: 18px;
+}
+.match .match-summary .items {
+  display: table-cell;
+  vertical-align: middle;
+  padding-left: 20px;
+}
+.match .match-summary .stats-button {
+  display: table-cell;
+  vertical-align: middle;
+  text-align: right;
+  white-space: nowrap;
+  width: 1px;
+  padding-left: 20px;
+}
+.match .match-summary .match-time {
+  display: table-cell;
+  vertical-align: middle;
+  text-align: right;
+  white-space: nowrap;
+  width: 1px;
+  padding-left: 20px;
+}
+.match .match-summary .match-history {
+  display: table-cell;
+  vertical-align: middle;
+  text-align: right;
+  white-space: nowrap;
+  width: 1px;
+  padding-left: 20px;
+}
+.show-more-container {
+  margin-top: 10px;
+  padding: 10px;
 }
